--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lerna": "^4.0.0",
     "prettier": "^2.5.1",
     "prettier-plugin-prisma": "^3.7.0",
+    "pretty-quick": "^3.1.3",
     "typescript": "^4.5.4"
   },
   "prettier": {
