--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "@typescript-eslint/parser": "^5.8.0",
     "eslint": "^8.5.0",
     "eslint-plugin-react": "^7.27.1",
+    "husky": "^7.0.4",
     "lerna": "^4.0.0",
+    "lint-staged": "^12.1.3",
     "prettier": "^2.5.1",
     "prettier-plugin-prisma": "^3.7.0",
     "pretty-quick": "^3.1.3",
@@ -15,5 +17,12 @@
   "prettier": {
     "semi": false,
     "printWidth": 100
+  },
+  "lint-staged": {
+    "*.{js,ts,tsx}": "eslint --cache --fix",
+    "*.{js,ts,tsx,css,md}": "prettier --write"
+  },
+  "scripts": {
+    "prepare": "husky install"
   }
 }
