--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "cleomacs",
   "private": true,
   "devDependencies": {
+    "@types/node": "^17.0.2",
     "@typescript-eslint/eslint-plugin": "^5.8.0",
     "@typescript-eslint/parser": "^5.8.0",
     "eslint": "^8.5.0",
@@ -12,6 +13,7 @@
     "prettier": "^2.5.1",
     "prettier-plugin-prisma": "^3.7.0",
     "pretty-quick": "^3.1.3",
+    "ts-node": "^10.4.0",
     "typescript": "^4.5.4"
   },
   "prettier": {
