--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -2,7 +2,7 @@
   "name": "@cleomacs/backend",
   "version": "1.0.0",
   "scripts": {
-    "dev": "ts-node src/index.ts",
+    "dev": "nodemon src/index.ts",
     "test": "jest",
     "test:watch": "jest --watch",
     "console": "NODE_OPTIONS='--experimental-repl-await' ts-node --project ./console/tsconfig-repl.json --interactive './console/console'"
@@ -11,6 +11,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.3",
     "jest": "^27.4.5",
+    "nodemon": "^2.0.15",
     "prisma": "^3.7.0",
     "supertest": "^6.1.6",
     "ts-jest": "^27.1.2"
