--- a/package.json
+++ b/package.json
@@ -2,17 +2,22 @@
   "name": "cleomacs",
   "private": true,
   "devDependencies": {
+    "@types/jest": "^27.0.3",
     "@types/node": "^17.0.2",
+    "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.8.0",
     "@typescript-eslint/parser": "^5.8.0",
     "eslint": "^8.5.0",
     "eslint-plugin-react": "^7.27.1",
     "husky": "^7.0.4",
+    "jest": "^27.4.5",
     "lerna": "^4.0.0",
     "lint-staged": "^12.1.3",
     "prettier": "^2.5.1",
     "prettier-plugin-prisma": "^3.7.0",
     "pretty-quick": "^3.1.3",
+    "supertest": "^6.1.6",
+    "ts-jest": "^27.1.2",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.4"
   },
@@ -25,6 +30,8 @@
     "*.{js,ts,tsx,css,md}": "prettier --write"
   },
   "scripts": {
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "lint": "eslint --ignore-path .gitignore --ext .js,.ts,.tsx .",
+    "test": "cd ./apps/backend && npm run test"
   }
 }
