--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -10,6 +10,7 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.3",
+    "@types/morgan": "^1.9.3",
     "@types/supertest": "^2.0.11",
     "jest": "^27.4.5",
     "nodemon": "^2.0.15",
@@ -19,6 +20,7 @@
   },
   "dependencies": {
     "@prisma/client": "^3.7.0",
-    "express": "^4.17.2"
+    "express": "^4.17.2",
+    "morgan": "^1.10.0"
   }
 }
