--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -22,6 +22,7 @@
     "@prisma/client": "^3.7.0",
     "express": "^4.17.2",
     "express-async-errors": "^3.1.1",
+    "iron-session": "^6.0.4",
     "morgan": "^1.10.0"
   }
 }
