--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -24,6 +24,7 @@
     "express-async-errors": "^3.1.1",
     "iron-session": "^6.0.4",
     "morgan": "^1.10.0",
+    "secure-password": "^4.0.0",
     "zod": "^3.11.6",
     "zod-prisma": "^0.3.2"
   }
