--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -11,6 +11,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.3",
     "@types/morgan": "^1.9.3",
+    "@types/secure-password": "^3.1.1",
     "@types/supertest": "^2.0.11",
     "jest": "^27.4.5",
     "nodemon": "^2.0.15",
