--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -27,6 +27,7 @@
     "morgan": "^1.10.0",
     "secure-password": "^4.0.0",
     "zod": "^3.11.6",
+    "zod-express-middleware": "^1.4.0",
     "zod-prisma": "^0.3.2"
   }
 }
