--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@prisma/client": "^3.7.0",
+    "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "express-async-errors": "^3.1.1",
     "iron-session": "^6.0.4",
