--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -2,7 +2,7 @@
   "name": "@cleomacs/backend",
   "version": "1.0.0",
   "scripts": {
-    "dev": "NODE_ENV='development' nodemon src/index.ts",
+    "dev": "nodemon -r dotenv/config src/index.ts",
     "test": "jest",
     "test:watch": "jest --watch",
     "console": "NODE_OPTIONS='--experimental-repl-await' ts-node --project ./console/tsconfig-repl.json --interactive './console/console'"
