--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "express-async-errors": "^3.1.1",
+    "http-errors": "^2.0.0",
     "iron-session": "^6.0.4",
     "morgan": "^1.10.0",
     "secure-password": "^4.0.0",
