--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -16,6 +16,7 @@
     "@types/secure-password": "^3.1.1",
     "@types/supertest": "^2.0.11",
     "jest": "^27.4.5",
+    "node-mocks-http": "^1.11.0",
     "nodemon": "^2.0.15",
     "prisma": "^3.7.0",
     "supertest": "^6.1.6",
