--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -31,6 +31,7 @@
     "http-errors": "^2.0.0",
     "iron-session": "^6.0.4",
     "morgan": "^1.10.0",
+    "nanoid": "^3.1.30",
     "secure-password": "^4.0.0",
     "zod": "^3.11.6",
     "zod-express-middleware": "^1.4.0",
