--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -17,12 +17,11 @@
     "jest": "^27.4.5",
     "node-mocks-http": "^1.11.0",
     "nodemon": "^2.0.15",
-    "prisma": "^3.7.0",
     "ts-jest": "^27.1.2"
   },
   "dependencies": {
     "@cleomacs/api": "^1.0.0",
-    "@prisma/client": "^3.7.0",
+    "@cleomacs/db": "^1.0.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
@@ -33,7 +32,6 @@
     "nanoid": "^3.1.30",
     "secure-password": "^4.0.0",
     "zod": "^3.11.6",
-    "zod-express-middleware": "^1.4.0",
-    "zod-prisma": "^0.3.2"
+    "zod-express-middleware": "^1.4.0"
   }
 }
