--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@cleomacs/api": "^1.0.0",
     "@cleomacs/db": "^1.0.0",
+    "@cleomacs/dbal": "^1.0.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
