--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -23,6 +23,8 @@
     "tailwindcss": "^3.0.9"
   },
   "devDependencies": {
+    "@iconify/json": "^1.1.453",
+    "@svgr/core": "^6.1.2",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "@types/tailwindcss": "^3.0.1",
@@ -30,6 +32,7 @@
     "autoprefixer": "^10.4.1",
     "postcss": "^8.4.5",
     "typescript": "^4.5.4",
+    "unplugin-icons": "^0.13.0",
     "vite": "^2.7.10",
     "vitest": "0.0.139"
   },
