--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "@typescript-eslint/parser": "^5.9.0",
     "eslint": "^8.5.0",
     "eslint-import-resolver-typescript": "^2.5.0",
+    "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-react": "^7.27.1",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "eslint-plugin-unicorn": "^40.0.0",
     "husky": "^7.0.4",
     "jest": "^27.4.5",
     "lerna": "^4.0.0",
