--- a/apps/frontend/tsconfig.build.json
+++ b/apps/frontend/tsconfig.build.json
@@ -1,6 +1,8 @@
 {
-  "extends": "../../tsconfig.json",
+  "extends": "../../tsconfig.build.json",
+
   "compilerOptions": {
+    "outDir": "./dist",
     "lib": ["es5", "dom"],
     "jsx": "react-jsx",
     "types": ["unplugin-icons/types/react"]
