--- a/lerna.json
+++ b/lerna.json
@@ -1,7 +1,6 @@
 {
-  "packages": [
-    "packages/*",
-    "apps/*"
-  ],
-  "version": "0.0.0"
+  "packages": ["packages/*", "apps/*"],
+  "version": "0.0.0",
+  "useWorkspaces": true,
+  "npmClient": "yarn"
 }
