--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "cleomacs",
   "private": true,
+  "workspaces": [
+    "packages/*",
+    "apps/*"
+  ],
   "devDependencies": {
-    "@types/jest": "^27.0.3",
-    "@types/node": "^17.0.2",
-    "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.8.0",
     "@typescript-eslint/parser": "^5.9.0",
     "eslint": "^8.5.0",
@@ -15,14 +16,11 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "eslint-plugin-unicorn": "^40.0.0",
     "husky": "^7.0.4",
-    "jest": "^27.4.5",
     "lerna": "^4.0.0",
     "lint-staged": "^12.1.3",
     "prettier": "^2.5.1",
     "prettier-plugin-prisma": "^3.7.0",
     "pretty-quick": "^3.1.3",
-    "supertest": "^6.1.6",
-    "ts-jest": "^27.1.2",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.4"
   },
@@ -37,6 +35,8 @@
   "scripts": {
     "prepare": "husky install",
     "lint": "eslint --ignore-path .gitignore --ext .js,.ts,.tsx .",
-    "test": "npx lerna run test"
+    "clean": "lerna run clean",
+    "build": "lerna run build",
+    "test": "lerna run test"
   }
 }
