--- a/packages/db/tsconfig.json
+++ b/packages/db/tsconfig.json
@@ -1,9 +1,6 @@
 {
+  "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "sourceMap": true,
-    "outDir": "dist",
-    "strict": true,
-    "lib": ["esnext"],
-    "esModuleInterop": true
+    "types": ["jest", "node"]
   }
 }
