--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,13 @@
 {
+  "extends": "./tsconfig.build.json",
+
   "compilerOptions": {
-    "sourceMap": true,
-    "outDir": "dist",
-    "strict": true,
-    "lib": ["esnext"],
-    "esModuleInterop": true,
-    "jsx": "react-jsx"
+    "baseUrl": ".",
+    "paths": {
+      "@cleomacs/db": ["packages/db"],
+      "@cleomacs/dbal": ["packages/dbal"],
+      "@cleomacs/api": ["packages/api"]
+    },
+    "noEmit": true
   }
 }
