--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -9,7 +9,7 @@
     "test": "vitest run",
     "test-watch": "vitest watch",
     "serve": "vite preview",
-    "storybook": "start-storybook -p 6006",
+    "storybook": "start-storybook -p 6006 --no-open",
     "build-storybook": "build-storybook"
   },
   "dependencies": {
@@ -26,6 +26,13 @@
   },
   "devDependencies": {
     "@iconify/json": "^1.1.453",
+    "@storybook/addon-actions": "^6.4.10",
+    "@storybook/addon-essentials": "^6.4.10",
+    "@storybook/addon-links": "^6.4.10",
+    "@storybook/addon-storyshots": "^6.4.10",
+    "@storybook/addon-storysource": "^6.4.10",
+    "@storybook/react": "^6.4.10",
+    "@storybook/testing-react": "^1.2.2",
     "@svgr/core": "^6.1.2",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
@@ -33,6 +40,7 @@
     "@vitejs/plugin-react": "^1.1.3",
     "autoprefixer": "^10.4.1",
     "postcss": "^8.4.5",
+    "storybook-builder-vite": "^0.1.13",
     "typescript": "^4.5.4",
     "unplugin-icons": "^0.13.0",
     "vite": "^2.7.10",
