--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -22,7 +22,8 @@
     "react-hook-form": "^7.22.5",
     "react-query": "^3.34.7",
     "react-router-dom": "^6.2.1",
-    "tailwindcss": "^3.0.9"
+    "tailwindcss": "^3.0.9",
+    "usehooks-ts": "^2.2.0"
   },
   "devDependencies": {
     "@iconify/json": "^1.1.453",
