--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -16,9 +16,11 @@
     "@headlessui/react": "^1.4.1",
     "@tailwindcss/line-clamp": "^0.3.0",
     "axios": "^0.24.0",
+    "final-form": "^4.20.6",
     "immer": "^9.0.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-final-form": "^6.5.7",
     "react-hook-form": "^7.22.5",
     "react-query": "^3.34.7",
     "react-router-dom": "^6.2.1",
