--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -17,6 +17,7 @@
     "@tailwindcss/line-clamp": "^0.3.0",
     "axios": "^0.24.0",
     "final-form": "^4.20.6",
+    "final-form-focus": "^1.1.2",
     "immer": "^9.0.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -37,6 +38,7 @@
     "@storybook/react": "^6.4.10",
     "@storybook/testing-react": "^1.2.2",
     "@svgr/core": "^6.1.2",
+    "@types/final-form-focus": "^1.1.2",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "@types/tailwindcss": "^3.0.1",
