--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -6,8 +6,9 @@
     "clean": "rm -rf ./dist",
     "compile": "tsc -p tsconfig.build.json  && vite build",
     "build": "yarn run clean && yarn run compile",
-    "test": "vitest run",
-    "test-watch": "vitest watch",
+    "test": "vite build && vitest run",
+    "test-watch": "vite build && vitest",
+    "test:ui": "vite build && vitest --ui",
     "serve": "vite preview",
     "storybook": "start-storybook -p 6006 --no-open",
     "build-storybook": "build-storybook"
@@ -44,8 +45,10 @@
     "@types/react-dom": "^17.0.11",
     "@types/tailwindcss": "^3.0.1",
     "@vitejs/plugin-react": "^1.1.3",
+    "@vitest/ui": "^0.1.13",
     "autoprefixer": "^10.4.1",
     "postcss": "^8.4.5",
+    "puppeteer": "^13.0.1",
     "storybook-builder-vite": "^0.1.13",
     "typescript": "^4.5.4",
     "unplugin-icons": "^0.13.0",
