--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -47,6 +47,7 @@
     "@vitejs/plugin-react": "^1.1.3",
     "@vitest/ui": "^0.1.13",
     "autoprefixer": "^10.4.1",
+    "dotenv": "^10.0.0",
     "postcss": "^8.4.5",
     "puppeteer": "^13.0.1",
     "storybook-builder-vite": "^0.1.13",
