--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -23,6 +23,7 @@
     "immer": "^9.0.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-error-boundary": "^3.1.4",
     "react-final-form": "^6.5.7",
     "react-hook-form": "^7.22.5",
     "react-query": "^3.34.7",
