--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -17,6 +17,7 @@
     "@types/http-errors": "^1.8.1",
     "@types/jest": "^27.0.3",
     "@types/morgan": "^1.9.3",
+    "@types/nodemailer": "^6.4.4",
     "@types/secure-password": "^3.1.1",
     "jest": "^27.4.5",
     "node-mocks-http": "^1.11.0",
@@ -35,6 +36,8 @@
     "iron-session": "^6.0.4",
     "morgan": "^1.10.0",
     "nanoid": "^3.1.30",
+    "nodemailer": "^6.7.2",
+    "preview-email": "^3.0.5",
     "secure-password": "^4.0.0",
     "zod": "^3.11.6",
     "zod-express-middleware": "^1.4.0"
