Add a redis tab to zellijrc

--- a/.zellijrc
+++ b/.zellijrc
@@ -78,4 +78,9 @@ tabs:
         # Needs a ~/.pgpass with a line : "127.0.0.1:5432:postgres:postgres:password"
         # And a "pip3 install --user pgcli"
         args: ["./postgres.sh && sleep 5s && pgcli --host 127.0.0.1 --user postgres"]
+  - name: "Redis"
+    run:
+      command:
+        cmd: "./.launch.expect"
+        args: ["./redis.sh && sleep 5s && redis-cli"]
   - name: "Utils"
