Add migrate command to package.json so I don't have to search for it in my shell history

--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -2,6 +2,7 @@
   "name": "@cleomacs/db",
   "version": "1.0.0",
   "scripts": {
+    "migrate": "npx prisma migrate dev && npx prettier -lw .",
     "clean": "rm -rf ./dist",
     "compile": "tsc -p tsconfig.build.json",
     "build": "yarn run clean && yarn run compile",
