--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -29,7 +29,8 @@
     "react-query": "^3.34.7",
     "react-router-dom": "^6.2.1",
     "tailwindcss": "^3.0.9",
-    "usehooks-ts": "^2.2.0"
+    "usehooks-ts": "^2.2.0",
+    "zustand": "^3.6.9"
   },
   "devDependencies": {
     "@iconify/json": "^1.1.453",
