--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -3,11 +3,15 @@
   "version": "1.0.0",
   "scripts": {
     "migrate": "npx prisma migrate dev && npx prettier -lw .",
+    "seed": "npx prisma db seed",
     "clean": "rm -rf ./dist",
     "compile": "tsc -p tsconfig.build.json",
     "build": "yarn run clean && yarn run compile",
     "test": "jest",
     "test:watch": "jest --watch"
+  },
+  "prisma": {
+    "seed": "ts-node seed.ts"
   },
   "devDependencies": {
     "@types/jest": "^27.0.3",
