--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -41,7 +41,9 @@
     "nanoid": "^3.1.30",
     "nodemailer": "^6.7.2",
     "preview-email": "^3.0.5",
+    "raw-body": "^2.4.2",
     "secure-password": "^4.0.0",
+    "superjson": "^1.8.0",
     "zod": "^3.11.6",
     "zod-express-middleware": "^1.4.0"
   }
