--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -53,6 +53,8 @@
     "autoprefixer": "^10.4.1",
     "dotenv": "^10.0.0",
     "postcss": "^8.4.5",
+    "prettier": "^2.5.1",
+    "prettier-plugin-tailwindcss": "^0.1.5",
     "puppeteer": "^13.0.1",
     "storybook-builder-vite": "^0.1.13",
     "typescript": "^4.5.4",
@@ -61,6 +63,7 @@
     "vitest": "0.0.139"
   },
   "prettier": {
-    "semi": false
+    "semi": false,
+    "printWidth": 100
   }
 }
