Enable typescript option downlevelIteration

--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -12,7 +12,8 @@
     "esModuleInterop": true,
     "types": [],
     "jsx": "react-jsx",
-    "noEmit": false
+    "noEmit": false,
+    "downlevelIteration": true
   },
   "exclude": ["node_modules", "dist"]
 }
